<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.wiscess</groupId>
  <artifactId>wiscess-security</artifactId>
  <version>3.0.5</version>
  <description>wiscess security package</description>
  <name>wiscess security</name>
  <url>http://www.wiscess.com.cn</url>
	<properties>
		<!-- <maven.dir>D:/GitHome/mvn-repo</maven.dir> -->
		<distribution.url>http://42.96.168.102:8081/repository/wiscess/</distribution.url>
		<spring-boot.version>3.0.5</spring-boot.version>
		<wiscess.version>3.0.5</wiscess.version>
		<swagger.version>2.7.0</swagger.version>
		<java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <plugins>
        	<!-- 编译插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
					<encoding>utf8</encoding>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings> 
                    <fork>true</fork>
                    <compilerArgs>
                        <arg>-verbose</arg>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- 源码打包插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase><!-- 要绑定到的生命周期的阶段 在verify之后，install之前执行下面指定的goal -->
						<goals>
							<goal>jar-no-fork</goal><!-- 类似执行mvn source:jar -->
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
		        <artifactId>maven-deploy-plugin</artifactId>
		        <version>2.8.2</version>
		        <!-- 发布到远程仓库-->
		        <configuration>
		            <altDeploymentRepository>wiscess::default::${distribution.url}</altDeploymentRepository>
		        </configuration>
		    </plugin>
        </plugins>
    </build>
	<!-- 仓库地址 -->
	<repositories>
		<repository>
			<id>nexus</id>
			<url>http://42.96.168.102:8081/repository/maven-public/</url>
        </repository>
	</repositories>
	<!-- 插件仓库地址 -->
	<pluginRepositories>
		<pluginRepository>
			<id>nexus</id>
			<url>http://42.96.168.102:8081/repository/maven-public/</url>
		</pluginRepository>
	</pluginRepositories>
	<!-- 依赖包 -->
    <dependencies>
    	<dependency>
    		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter-security</artifactId>
    		<version>${spring-boot.version}</version>
    	</dependency>
		<dependency>
			<groupId>com.wiscess</groupId>
			<artifactId>wiscess-common</artifactId>
			<version>3.0.5</version>
		</dependency>
		<dependency>
			<groupId>com.wiscess</groupId>
			<artifactId>wiscess-filter</artifactId>
			<version>3.0.5</version>
		</dependency>
		<dependency>
			<groupId>com.wiscess</groupId>
			<artifactId>wiscess-jpa</artifactId>
			<version>3.0.5</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>0.9.1</version>
		</dependency>
    </dependencies>
</project>